# SpellCaster

./: .gitignore  CMakeLists.txt  README.md  SpellCaster.json  all.txt  computer.txt  notes.md  player.txt  test.json
glad/: glad.c  glad.h
shaders/: fire_fragment.glsl  fire_vertex.glsl  flame_fragment.glsl  fragment.glsl  glow_fragment.glsl  line_fragment.glsl  line_geometry.glsl  line_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
src/: Animated.h  Application.h  Artifacts.cpp  Board.cpp  Board.h  BoardBase.h  CardBase.h  CardClass.h  CardProperty.h  Cards.cpp  Cards.h  Draw.cpp  Draw.h  Drawable.h  GLError.cpp  GLError.h  Letter.cpp  Letter.h  Location.h  Mana.h  Math.h  Rectangle.cpp  Rectangle.h  SpellCaster.cpp  SpellCaster.h  Spells.cpp  TextRectangle.cpp  TextRectangle.h  Types.h  UCTRave.cpp  UCTRave.h  UIState.cpp  UIState.h  geometry.cpp  geometry.h  linmath.h  read_file.h  sc.cpp  shaders.cpp  shaders.h  (+1 more)
